--- a/Extensions/full-screen/src/styles/tvMode.scss
+++ b/Extensions/full-screen/src/styles/tvMode.scss
@@ -8,6 +8,9 @@
         top: auto;
         bottom: 75px;
     }
+    #fad-lyrics-plus-container {
+        width: 35%;
+    }
     &.lyrics-active #fsd-foreground {
         width: max-content;
         max-width: 65%;
